--- a/Man.conf
+++ b/Man.conf
@@ -1,7 +1,8 @@
 [general]
-server_check_url= http://www.qualcomm.cn/generate_204
+server_check_url=http://www.qualcomm.cn/generate_204
+resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 geo_location_checker=http://ip-api.com/json/?lang=en, https://raw.githubusercontent.com/re2/g/master/IP_API.js
-dns_exclusion_list = *.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com
+dns_exclusion_list=*.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com
 excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8, 127.0.0.0/8, 224.0.0.0/24
 
 [dns]
@@ -15,21 +16,19 @@ static=Apple, direct, proxy, img-url=https://raw.githubusercontent.com/re2/Qure/
 static=AppleUpdate, reject, direct, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/Apple_Update.png
 
 [server_remote]
-https://dler.cloud/subscribe/*?protocols=ss&list=quantumultx&match=BGP, tag=Dler, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/Dler.png, enabled=true
-https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=81817&token=*, tag=ALI-H, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/JIYOU.png, enabled=true
+https://dler.cloud/subscribe/?protocols=ss&list=quantumultx, tag=Dler, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/Dler.png,  update-interval=99986400, opt-parser=false, enabled=true
 
 [filter_remote]
-https://raw.githubusercontent.com/re2/g/master/AppleUpdate.list, tag=⛔屏蔽更新, enabled=true
-https://raw.githubusercontent.com/re2/g/master/AdRule.list, tag=🚫广告拦截, enabled=true
-https://raw.githubusercontent.com/re2/g/master/HKMTMedia.list, tag=🔅港澳台媒体, enabled=true
-https://raw.githubusercontent.com/re2/g/master/Global.list, tag=🌏全球加速, enabled=true
-https://raw.githubusercontent.com/re2/g/master/Apple.list, tag=🍎苹果服务, enabled=true
-https://raw.githubusercontent.com/re2/g/master/Direct.list, tag=🎯中国直连, enabled=true
+https://raw.githubusercontent.com/re2/g/master/AppleUpdate.list, tag=⛔屏蔽更新, update-interval=99986400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/re2/g/master/R.list, tag=🚫广告拦截, update-interval=99986400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/re2/g/master/HKMTMedia.list, tag=🔅港澳台媒体, update-interval=99986400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/re2/g/master/Global.list, tag=🌏全球加速, update-interval=99986400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/re2/g/master/Apple.list, tag=🍎苹果服务, update-interval=99986400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/re2/g/master/Direct.list, tag=🎯中国直连, update-interval=99986400, opt-parser=false, enabled=true
 
 [rewrite_remote]
-https://raw.githubusercontent.com/re2/g/master/Rewrite.conf, tag=eHpo1 Rewrite, enabled=true
-https://raw.githubusercontent.com/re2/g/master/Js.conf, tag=Rewrite, enabled=true
-https://raw.githubusercontent.com/re2/g/master/GetCookie.conf, tag=获取Cookie, enabled=true
+https://raw.githubusercontent.com/re2/g/master/Advertising.conf, tag=blackmatrix7 Rewrite, update-interval=99986400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/re2/g/master/GetCookie.conf, tag=获取Cookie, update-interval=99986400, opt-parser=false, enabled=true
 
 [server_local]
 
@@ -38,40 +37,62 @@ geoip, cn, direct
 final, Final
 
 [task_local]
+5 6-18/6 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_fruit.js, tag=东东农场 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_fruit.png, enabled=true
+15 6-18/6 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_pet.js, tag=东东萌宠 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_pet.png, enabled=true
+1 7-21/2 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_plantBean.js, tag=种豆得豆 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_plantBean.png, enabled=true
+3 */2 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_moneyTree.js, tag=摇钱树 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_moneyTree.png, enabled=true
+15 */2 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy.js, tag=宠汪汪 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_joy.png, enabled=true
+0 0,6 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_steal.js, tag=宠汪汪偷好友积分与狗粮 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_joy_steal.png, enabled=true
+15 */1 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_feedPets.js, tag=宠汪汪喂食 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_joy_feedPets.png, enabled=true
+0 0-16/8 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_reward.js, tag=宠汪汪积分兑换奖品 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_joy_reward.png, enabled=true
+55 23 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_unsubscribe.js, tag=取关店铺商品 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_unsubscribe.png, enabled=true
+11 1-23/5 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_superMarket.js, tag=东东超市 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_superMarket.png, enabled=true
+0 0 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_blueCoin.js, tag=京小超兑换奖品 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_blueCoin.png, enabled=true
+10 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_shop.js, tag=进店领豆 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_shop.png, enabled=true
+5 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_club_lottery.js, tag=摇京豆 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_club_lottery.png, enabled=true
+1 1 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_redPacket.js, tag=京东全民开红包 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_redPacket.png, enabled=true
+0 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_jdzz.js, tag=京东赚赚 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_jdzz.png, enabled=true
+2 9 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_bean_change.js, tag=京豆变动通知 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_bean_change.png, enabled=true
+10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_dreamFactory.js, tag=京喜工厂 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_dreamFactory.png, enabled=true
+16 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_small_home.js, tag=东东小窝 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_small_home.png, enabled=true
+10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_jdfactory.js, tag=东东工厂 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_jdfactory.png, enabled=true
+10 0,20 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_necklace.js, tag=点点券 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_necklace.png, enabled=true
+10 7 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_syj.js, tag=十元街 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_syj.png, enabled=true
+10 7 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_bean_home.js, tag=领京豆额外奖励 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_bean_home.png, enabled=true
+10 7 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_car.js, tag=京东汽车 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_car.png, enabled=true
+10 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_kd.js, tag=京东快递签到 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_kd.png, enabled=true
+10-20/5 12 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_live.js, tag=京东直播 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_live.png, enabled=true
+0 */3 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_daily_egg.js, tag=京东金融-天天提鹅 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_daily_egg.png, enabled=true
+12 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_pigPet.js, tag=京东金融-养猪猪 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_pigPet.png, enabled=true
+55 23 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_unbind.js, tag=注销京东会员卡 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_unbind.png, enabled=true
+10 7 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_crazy_joy.js, tag=CrazyJoy任务 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_crazy_joy.png, enabled=true
+11 1 * * * https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, tag=抽奖机 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_lotteryMachine.png, enabled=true
+11 9 * * * https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, tag=排行榜 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jd_rankingList.png, enabled=true
+0 * * * * https://raw.githubusercontent.com/MoPoQAQ/Script/main/Me/jx_cfd.js, tag=京喜财富岛 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd.png, enabled=true
 # 京东
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
-2 09 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png,enabled=true
-
+5 00 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
 # 52破解
 #浏览器访问https://www.52pojie.cn/home.php?mod=space 即可
-2 09 * * * https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png,enabled=true
-
-# 美团
-#打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
-3 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js, tag=美团, img-url=https://raw.githubusercontent.com/Orz-3/task/master/meituan.png,enabled=true
-
+1 08 * * * https://raw.githubusercontent.com/re2/g/master/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png, enabled=true
 # 中国联通
-#1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
-#2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
-1 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js, tag=中国联通, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10010.png,enabled=true
-
+8 08 * * * https://raw.githubusercontent.com/re2/g/master/10010.js, tag=中国联通, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10010.png, enabled=true
+# 中国移动
+7 08 * * * https://raw.githubusercontent.com/re2/g/master/10086.fee.js, tag=中国移动, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10086.png, enabled=true
 # 腾讯视频
-#1.手机浏览器访问并登录: https://film.qq.com/
-2 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js, tag=腾讯视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/videoqq.png,enabled=true
-
-# 喜马拉雅
-#打开 APP, 访问下右下角`账号`
-3 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.js, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/task/master/ximalaya.png,enabled=true
-
-# 人人视频
-#打开 APP, 访问下`个人中心`
-2 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, tag=人人视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/rrtv.png,enabled=true
-
+3 08 * * * https://raw.githubusercontent.com/re2/g/master/videoqq.js, tag=腾讯视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/videoqq.png, enabled=true
 # 爱奇艺
-#打开App,访问下右下角 `我的
-1 09 * * * https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, tag=爱奇艺, img-url=https://raw.githubusercontent.com/Orz-3/task/master/iQIYI.png,enabled=true
+3 08 * * * https://raw.githubusercontent.com/re2/g/master/iQIYI.js, tag=爱奇艺, img-url=https://raw.githubusercontent.com/Orz-3/task/master/iQIYI.png, enabled=true
+# 喜马拉雅
+4 08 * * * https://raw.githubusercontent.com/re2/g/master/ximalaya.js, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/task/master/ximalaya.png, enabled=true
+# 百度贴吧
+2 08 * * * https://raw.githubusercontent.com/re2/g/master/tieba.js, tag=百度贴吧, img-url=https://raw.githubusercontent.com/Orz-3/task/master/tieba.png, enabled=true
+# 企鹅读书
+*/11 * * * * https://raw.githubusercontent.com/re2/g/master/qqread.js, tag=企鹅读书 , img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/qqreads.png, enabled=true
 
 [rewrite_local]
+
+[http_backend]
 
 [mitm]
 passphrase = DlerCloud
