--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,23 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
+hostname = draw.jdfcloud.com, jdjoy.jd.com, www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
+
+
+# 宠汪汪强制为别人助力
+^https:\/\/draw\.jdfcloud\.com\/\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_help.js
+
+# 宠汪汪赛跑
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
+
+# 宠汪汪赛跑
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
+
+# 京喜农场
+^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.cookie.js
+
+# 聚宝盆投狗粮辅助
+^https:\/\/jdjoy\.jd\.com\/pet\/getPetTreasureBox|^https:\/\/draw\.jdfcloud\.com\/\/pet\/getPetTreasureBox url script-response-body https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_petTreasureBox.js
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
