--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -9,8 +9,7 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 # ---(By Choler)---
 # > QQNews
 ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) url script-response-body https://raw.githubusercontent.com/re2/g/master/QQNews.js
-# > Toutiao
-^https?://[\s\S]*\.snssdk\.com/api/news/feed/v88/ url script-response-body https://raw.githubusercontent.com/re2/g/master/Toutiao.js
+
 # > Douyin
 ^https?:\/\/.*\.amemv\.com\/aweme\/v2\/(follow\/)?feed\/ url request-header ^GET \/aweme\/v\d\/(follow\/)?feed\/(.+\r\n) request-header GET /aweme/v1/$1feed/$2
 ^https?:\/\/.*\.amemv\.com\/aweme\/v\d\/(feed|mix\/aweme|aweme\/post|(multi\/)?aweme\/detail|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin.js
@@ -172,7 +171,7 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 # A
 # --- (Alibaba) ---
 # > Taobao - gw.alicdn.com,heic.alicdn.com
-^https?:\/\/(gw|heic)\.alicdn\.com\/\w{2}s\/[\w\/.-]+\.jpg_(9\d{2}|\d{4}) url reject
+^https?:\/\/(gw|heic)\.alicdn\.com\/\w{2}s\/.+\.jpg_(9\d{2}|\d{4}) url reject
 ^https?:\/\/(gw|heic)\.alicdn\.com\/imgextra\/.+\d{4}-\d{4}\.jpg_9\d{2} url reject
 # > Xianyu - acs.m.taobao.com
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.idle\.home\.welcome\/ url reject
@@ -184,7 +183,6 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 ^https?:\/\/render\.alipay\.com\/p\/s\/h5data\/prod\/spring-festival-2019-h5data\/popup-h5data\.json url reject
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.gateway\.get\/ url reject
 ^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.wireless\.home\.splash\.awesome\.get\/ url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.exposure\.get\/ url reject
 # > Xiami Music - acs.m.taobao.com
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alimusic\.common\.mobileservice\.startinit\/ url reject
 # > AMap - m*.amap.com
@@ -225,7 +223,7 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 ^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/v\d\/show url reject
 # ---
 # > bilibili - app.bilibili.com,manga.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/ url reject
+# ^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/ url reject
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/Flash url reject
 # > BeiTaiKitchen - channel.beitaichufang.com
 ^https?:\/\/channel\.beitaichufang\.com\/channel\/api\/v\d\/promote\/ios\/start\/page url reject
@@ -334,8 +332,6 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 ^https?:\/\/gateway\.shouqiev\.com(:8443)?\/fsda\/app\/bootImage\.json url reject
 # > Guotai Junan Securities - dl.app.gtja.com
 ^https?:\/\/dl\.app\.gtja\.com\/dzswem\/kvController\/[\w\/]+\.jpg$ url reject
-# > Gome - prom.mobile.gome.com.cn
-^https?:\/\/prom\.mobile\.gome\.com\.cn\/mobile\/promotion\/promscms\/\w+\.jsp url reject
 
 # H
 # > HangZhou CityzenCard - smkmp.96225.com
@@ -364,6 +360,9 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 ^https?:\/\/www\.inoreader\.com\/adv\/ url reject
 # > i4 - list-app-m.i4.cn
 ^https?:\/\/list-app-m\.i4\.cn\/getopfstadinfo\.xhtml url reject
+# > iFreeTimebook - icc.one,jxd524.github.io
+^https?:\/\/jxd524\.github\.io\/iFreeTime\/xid32uxaoecnfv2\/ url reject
+^https?:\/\/icc\.one\/iFreeTime\/xid32uxaoecnfv2\/ url reject
 
 # J
 # > JD - api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com
@@ -620,6 +619,13 @@ hostname = -lark-frontier-hl.snssdk.com,www.google.cn,api.abema.io,api.21jingji.
 ^https?:\/\/\w+\.jstucdn\.com\/(g3\/|js\/ad) url reject
 
 # Z
+# > Zhihu - www.zhihu.com,api.zhihu.com
+^https?:\/\/api\.zhihu\.com\/commercial_api\/ url reject
+^https?:\/\/api\.zhihu\.com\/fringe\/ad url reject
+^https?:\/\/api\.zhihu\.com\/ad url reject
+^https?:\/\/api\.zhihu\.com\/appview\/api\/v\d\/answers\/\d+\/recommendations url reject
+^https?:\/\/api\.zhihu\.com\/\w+\/\d+\/comments\/featured-comment-ad url reject
+^https?:\/\/www\.zhihu\.com\/api\/v\d\/answers/\d+/recommendations url reject
 # > zhibo8 - a.qiumibao.com
 ^https?:\/\/a\.qiumibao\.com\/activities\/config\.php url reject
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d):\d+\/allOne\.php\?ad_name url reject
