--- a/Man.conf
+++ b/Man.conf
@@ -90,7 +90,7 @@ https://raw.githubusercontent.com/re2/g/master/GetCookie.conf, tag=获取Cookie,
 
 # 服务器引用（机场订阅）
 [server_remote]
-https://dler.cloud/subscribe/?protocols=ss&list=quantumultx, tag=Dler, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/Dler.png,  update-interval=99986400, opt-parser=false, enabled=true
+https://dler.cloud/subscribe/?protocols=ss&list=quantumultx&info=1, tag=Dler, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/Dler.png,  update-interval=99986400, opt-parser=false, enabled=true
 
 https://rxl-nc.xyz/link/?list=quantumultx, tag=BCY, img-url=https://raw.githubusercontent.com/re2/mini/master/baicaoyuan.png, update-interval=99986400, opt-parser=false, enabled=true
 
