--- a/TikTokUK.conf
+++ b/TikTokUK.conf
@@ -1,6 +1,6 @@
-hostname = *.tiktokv.com, *.byteoversea.com, *.musical.ly, *.snssdk.com
+hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
 
-# TikTok By wzw1997007 & Choler
-(?<=_region=)CN(?=&) url 307 UK
-(?<=&app_version=)1(6|7)..(?=.?.?&) url 307 1
-(?<=\?version_code=)1(6|7)..(?=.?.?&) url 307 1
+# TikTok By xiaoadou
+(?<=_region=)CN(?=&) url 307 JP
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
