--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,8 +3,11 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = draw.jdfcloud.com, jdjoy.jd.com, www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
+hostname = 110.43.90.61, zt.wps.cn, draw.jdfcloud.com, jdjoy.jd.com, www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
 
+
+# WPS
+^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list url script-request-header https://raw.githubusercontent.com/re2/g/master/wps.cookie.js
 
 # 宠汪汪强制为别人助力
 ^https:\/\/draw\.jdfcloud\.com\/\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_help.js
