--- a/Advertising.conf
+++ b/Advertising.conf
@@ -605,7 +605,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 ^https?:\/\/img\.ddrk\.me\/cover\.png url reject-img
 ^https?:\/\/img\.ihytv\.com\/material\/adv\/img\/ url reject-img
 ^https?:\/\/img\.jiemian\.com\/ads\/ url reject
-^https?:\/\/img\.meituan\.net\/(adunion|display|midas)\/.+?\.(gif|jpg|jpg\.webp)$ url reject
+^https?:\/\/img\.meituan\.net\/(adunion|display|dpmobile|midas)\/\w+\.(gif|jpg|jpg\.webp)$ url reject
 ^https?:\/\/img\.meituan\.net\/(display|midas)\/.+?\.(gif|jpg) url reject
 ^https?:\/\/img\.meituan\.net\/display\/\w+\.jpg\.webp url reject-img
 ^https?:\/\/img\.meituan\.net\/midas\/ url reject
