--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = 110.43.90.61, zt.wps.cn, draw.jdfcloud.com, jdjoy.jd.com, www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
+hostname = 110.43.90.61, zt.wps.cn, draw.jdfcloud.com, jdjoy.jd.com, www.52pojie.cn, act.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
 
 
 # WPS
