--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,19 +3,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = 110.43.90.61, zt.wps.cn, draw.jdfcloud.com, jdjoy.jd.com, www.52pojie.cn, act.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
-
-# WPS
-^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list url script-request-header https://raw.githubusercontent.com/re2/g/master/wps.cookie.js
-
-# 宠汪汪强制为别人助力
-^https:\/\/draw\.jdfcloud\.com\/\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_help.js
-
-# 宠汪汪赛跑
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
-
-# 宠汪汪赛跑
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
+hostname = www.52pojie.cn, act.10010.com, clientaccess.10086.cn, tieba.baidu.com
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -32,14 +20,5 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/re2/g/master/10086.fee.cookie.js
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/re2/g/master/10086.fee.cookie.js
 
-# 爱奇艺 cookie
-https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header https://raw.githubusercontent.com/re2/g/master/iQIYI.js
-
 # 百度贴吧cookie获取，当失效时需手动登录https://tieba.baidu.com/index.html贴吧获取cookie，待弹出获取成功即可
 ^https?:\/\/tieba\.baidu\.com\/?.? url script-request-header https://raw.githubusercontent.com/re2/g/master/tieba.cookie.js
-
-# 喜马拉雅
-^https?:\/\/.*\/mobile\-user\/homePage\/.* url script-request-header https://raw.githubusercontent.com/re2/g/master/ximalaya.cookie.js
-
-# 腾讯视频，获取 Cookie:手机浏览器访问: https://film.qq.com/，随便选 1 部电影观看
-^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header https://raw.githubusercontent.com/re2/g/master/videoqq.cookie.js
