--- a/Advertising.conf
+++ b/Advertising.conf
@@ -29,11 +29,18 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/re2/g/master/wb_ad.js
 # > WeChat
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/re2/g/master/WeChat.js
-# > 淘宝历史比价
-^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
-# > 京东历史比价
+# 京东比价(By StimeKe)
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
+
+#淘宝比价(By StimeKe)
+^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
+^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
+
+# > 淘宝历史比价
+#^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+#^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+# > 京东历史比价
+#^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
 # ------
 
 # ---(By blackmatrix7)---
