--- a/Advertising.conf
+++ b/Advertising.conf
@@ -10,6 +10,9 @@ hostname = -lark-frontier-hl.snssdk.com,*.bilibili.com,api.vc.bilibili.com,www.g
 # 百度超级会员
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/re2/g/master/BaiduCloud.js
 
+# 百度搜索防跳转
+^https?\:\/\/boxer\.baidu\.com\/scheme\?scheme url script-response-body https://raw.githubusercontent.com/re2/g/master/baidu-no-redirect.js
+
 # 人人视频（加上了看电影的解锁）
 ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/re2/g/master/rrtv.js
 
