--- a/Advertising.conf
+++ b/Advertising.conf
@@ -136,7 +136,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 # 百度（全站替换为手机百度 Quark 的 User-Agent）
 ^https?:\/\/(?!d\.pcs).*(?<!map)\.baidu\.com url request-header (\r\n)User-Agent:.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
-# 知乎（部分替换为手机百度 Quark 的 User-Agent）
+# 知乎（部分替换为手机Quark 的 User-Agent）
 ^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
 # > WeChat Official Account
@@ -150,6 +150,14 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 
 (^https?:\/\/[\w-]+\.googlevideo\.com\/.+)(ctier=L)(&.+) url 302 $1$3
 ^https?:\/\/[\w-]+\.googlevideo\.com\/.+&(oad|ctier) url reject
+# Redirect HTTP to HTTPS
+^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
+^https?:\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
+^https?:\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
+^https?:\/\/you\.163\.com\/ url 302 https://you.163.com/
+^https?:\/\/(www.)?suning\.com\/ url 302 https://suning.com/
+^https?:\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
+
 
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)(:\d+)?\/V\d\/splash\/getSplashV\d\.action$ url reject
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d):\d+/xygj-config-api\/queryData url reject
