--- a/Advertising.conf
+++ b/Advertising.conf
@@ -11,7 +11,7 @@ hostname = -lark-frontier-hl.snssdk.com,*.bilibili.com,api.live.bilibili.com,api
 ^http:\/\/c\.tieba\.baidu\.com\/c\/f\/((frs|pb)\/page|excellent\/personalized|frs\/generalTabList) url script-response-body https://raw.githubusercontent.com/re2/g/master/tieba-proto.js
 
 # 百度超级会员
-https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/re2/g/master/BaiduCloud.js
+https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/re2/g/master/BaiduCloud.js
 
 # 百度搜索防跳转
 ^https?\:\/\/boxer\.baidu\.com\/scheme\?scheme url script-response-body https://raw.githubusercontent.com/re2/g/master/baidu-no-redirect.js
