--- a/Advertising.conf
+++ b/Advertising.conf
@@ -32,12 +32,16 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 # > WeChat
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/re2/g/master/WeChat.js
 
-# 京东比价(By StimeKe)
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
+# 京东比价
+# 比价信息显示在商品下方
+^https?://api\.m\.jd\.com/(client\.action|api)\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness|pingou_item) url https://raw.githubusercontent.com/re2/g/master/jd_price.js
 
-# 淘宝比价(By StimeKe)
-^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+# 淘宝比价
+# 历史价格在“保障”中显示，需要点击“保障”才能看到，和京东不一样
+# “保障”显示在商品下方
+# 如果还是不显示，那就把app卸载重新安装
+^http:\/\/.+\/amdc\/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+^https?:\/\/trade-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
 
 # 知乎网页直接看
 ^https://www\.zhihu\.com/question/ url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu.js
