--- a/Advertising.conf
+++ b/Advertising.conf
@@ -40,8 +40,8 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 # 历史价格在“保障”中显示，需要点击“保障”才能看到，和京东不一样
 # “保障”显示在商品下方
 # 如果还是不显示，那就把app卸载重新安装
-^http:\/\/.+\/amdc\/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
-^https?:\/\/trade-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+^http://.+/amdc/mobileDispatch url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
 
 # 知乎网页直接看
 ^https://www\.zhihu\.com/question/ url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu.js
