--- a/Advertising.conf
+++ b/Advertising.conf
@@ -34,7 +34,7 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 
 # 京东比价
 # 比价信息显示在商品下方
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body url https://raw.githubusercontent.com/re2/g/master/jd_price.js
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
 
 # 淘宝比价
 # 历史价格在“保障”中显示，需要点击“保障”才能看到，和京东不一样
