--- a/Advertising.conf
+++ b/Advertising.conf
@@ -3,6 +3,7 @@ hostname = image.spdbccc.com.cn, creditcardapp.bankcomm.cn,news.l.qq.com, btrace
 # > 买单吧 （一小部分误杀，应该不影响使用，不用频繁更新）
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/queryGuidePageAds\.do$ url reject-200
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/getPopAds\.do$ url reject-200
+^https?:\/\/creditcardapp\.bankcomm\.cn\/mappweb_interface\/common\/(qryPopAds|qryLaunchAds)\.do url reject-200
 
 # > 浦大喜奔（倒计时还在）(7.2.5以上版本多了一行 点击了解详情)
 ^https?:\/\/image\.spdbccc\.com\.cn\/group\d\/M00\/[A-Z0-9]{2}\/[A-Z0-9]{2}\/[a-zA-Z]{7}-[a-zA-Z]{11}_[a-zA-Z0-9]{10}\.jpg url reject
