--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,11 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = www.52pojie.cn, act.10010.com, clientaccess.10086.cn, tieba.baidu.com
+hostname = www.52pojie.cn, act.10010.com, clientaccess.10086.cn, tieba.baidu.com, *.y.qq.com
+
+#  QQ音乐获取cookie
+https://c6.y.qq.com/shop/fcgi-bin/fcg_get_order? url script-request-header https://raw.githubusercontent.com/WowYiJiu/Personal/main/Script/qqMusic.js
+https://u6.y.qq.com/cgi-bin/musics.fcg? url script-request-header https://raw.githubusercontent.com/WowYiJiu/Personal/main/Script/qqMusic.js
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
