--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,8 +3,10 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = www.52pojie.cn, act.10010.com, clientaccess.10086.cn, tieba.baidu.com
+hostname = www.52pojie.cn, act.10010.com, clientaccess.10086.cn, tieba.baidu.com, passport.iqiyi.com
 
+# 爱奇艺签到获取cookie
+^https:\/\/passport\.iqiyi\.com\/apis\/user\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
