--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -6,7 +6,7 @@
 hostname = www.52pojie.cn, act.10010.com, clientaccess.10086.cn, tieba.baidu.com, passport.iqiyi.com
 
 # 爱奇艺签到获取cookie
-^https:\/\/passport\.iqiyi\.com\/apis\/user\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+^https:\/\/passport\.iqiyi\.com\/apis\/user\/ url script-request-header https://raw.githubusercontent.com/re2/g/master/iQIYI.js
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
