--- a/Advertising.conf
+++ b/Advertising.conf
@@ -102,7 +102,7 @@ https://license.pdfexpert.com/api/2.0/documents/subscription/refresh url script-
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
 
 # > Grow Unlock Permanent VIP
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/re2/g/master/GrowForeverVipCrack.js
+;^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/re2/g/master/GrowForeverVipCrack.js
 
 # >sleep cycle: 睡眠监测梦话鼾声记录及智能闹钟（永久会员）
 ^https?:\/\/ch.sleepcycle.com\/api\/v1\/subscription/get$ url script-response-body https://raw.githubusercontent.com/re2/g/master/sleepcycle.js
