--- a/Advertising.conf
+++ b/Advertising.conf
@@ -2,8 +2,8 @@ hostname = in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.com, pages.x
 
 
 
-^https:\/\/in\.m\.jd\.com\/product\/graphext\/\d+\. url script-response-body https://raw.githubusercontent.com/re2/g/master/jdprice.js
-
+;^https:\/\/in\.m\.jd\.com\/product\/graphext\/\d+\. url script-response-body https://raw.githubusercontent.com/re2/g/master/jdprice.js
+^https?:\/\/api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/wf021325/qx/master/js/jd_price.js
 # > 咪咕视频开屏广告
 ^https://.*miguvideo\.com/request/sdk url reject-200
 ^https://common-sc\.miguvideo\.com/task/v7/task-list/cmvideo/visitor url reject-200
