--- a/Advertising.conf
+++ b/Advertising.conf
@@ -80,6 +80,9 @@ hostname = in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.com, pages.x
 # > NYFM Permanent VIP 1.5.2
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
 
+# > Picsew解锁专业版
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/re2/g/master/PicsewProCrack.js
+
 # >sleep cycle: 睡眠监测梦话鼾声记录及智能闹钟（永久会员）
 ^https?:\/\/ch.sleepcycle.com\/api\/v1\/subscription/get$ url script-response-body https://raw.githubusercontent.com/re2/g/master/sleepcycle.js
 
