--- a/Advertising.conf
+++ b/Advertising.conf
@@ -57,19 +57,12 @@ hostname = in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.com, pages.x
 # > 小红书_启动引导@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/guide\/home_guide url reject-200
 
-# CMCC启动页
-^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/init\/startInit$ url script-response-body https://raw.githubusercontent.com/re2/g/master/CMCCNoAds.js
-# 首页 - 下拉
-^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/newTopPullSecond\/getNewTopPullList url script-response-body https://raw.githubusercontent.com/re2/g/master/CMCCNoAds.js
-# 首页 - 悬浮广告
-^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/emotionMarket\/getEmotionMarketNew url script-response-body https://raw.githubusercontent.com/re2/g/master/CMCCNoAds.js
-^https?:\/\/h\.app\.coc\.10086\.cn\/biz-orange\/DH\/homeArea\/getTopAreaList url script-response-body https://raw.githubusercontent.com/re2/g/master/CMCCNoAds.js
-# 弹窗
-^https?:\/\/h\.app\.coc\.10086\.cn\/biz-orange\/DH\/popupWindow\/getDetail url reject-200
-# 办理 - 横幅
-^https?:\/\/h\.app\.coc\.10086\.cn\/biz-orange\/DH\/navigation\/getNavigationNewInfo url script-response-body https://raw.githubusercontent.com/re2/g/master/CMCCNoAds.js
-# 我的 - 弹窗 
-^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/friendShake\/getShakeList url script-response-body https://raw.githubusercontent.com/re2/g/master/CMCCNoAds.js
+# > 中国移动
+# hostname = client.app.coc.10086.cn, h.client.app.coc.10086.cn, app.10086.cn
+^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/init\/startInit url reject
+^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/explorePage\/getAdverList url reject
+# 多个悬浮窗
+^https?:\/\/(client\.app\.coc|h\.app\.coc|app)\.10086\.cn\/biz-orange\/DN\/emotionMarket url reject
 
 # >计步器 StepsApp（恢复购买）
 ;^https?:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/stepsapp.js
