--- a/Advertising.conf
+++ b/Advertising.conf
@@ -769,8 +769,7 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 
 # > 夸克
 # hostname = open-cms-api.uc.cn, open-cms-api.quark.cn
-^https?:\/\/open-cms-api\.(uc|quark)\.cn\/open-cms url script-response-body 
-https://raw.githubusercontent.com/re2/g/refs/heads/master/quark.js
+^https?:\/\/open-cms-api\.(uc|quark)\.cn\/open-cms url script-response-body https://raw.githubusercontent.com/re2/g/refs/heads/master/quark.js
 
 # L
 # > LaiFeng
