--- a/Advertising.conf
+++ b/Advertising.conf
@@ -99,7 +99,7 @@ hostname = buy.itunes.apple.com, api.rc-backup.com, revenuecat.com, api.revenuec
 ^https?:\/\/mei\.tu url script-analyze-echo-response https://raw.githubusercontent.com/re2/g/master/meitu.js
 
 # > NYFM Permanent VIP 1.5.2 buy.itunes.apple.com, 
-;^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
 
 # > Pillow解锁专业版
 ^https:\/\/(api\.rc-backup\.com|api\.revenuecat\.com)\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/revcat2099.js
