--- a/ForOwnUser.conf
+++ b/ForOwnUser.conf
@@ -1,9 +1,15 @@
 
 
-hostname = buy.itunes.apple.com
+hostname = buy.itunes.apple.com, api.revenuecat.com
 
 # > Picsew解锁专业版
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/re2/g/master/PicsewProCrack.js
 
 # > NYFM Permanent VIP 1.5.2 buy.itunes.apple.com, 
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
+
+# >计步器 StepsApp（恢复购买）
+^https?:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/stepsapp.js
+
+# > Pillow解锁专业版
+^https:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/revcat2099.js
