--- a/Advertising.conf
+++ b/Advertising.conf
@@ -104,6 +104,7 @@ hostname = api.rc-backup.com, *.githubusercontent.com, github.com, wx.17u.cn,web
 
 # > Pillow解锁专业版
 ^https:\/\/api\.rc-backup\.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/revcat2099.js
+;^https:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/revcat2099.js
 
 # > Picsew解锁专业版
 ;^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/re2/g/master/PicsewProCrack.js
