--- a/ForOwnUser.conf
+++ b/ForOwnUser.conf
@@ -1,6 +1,6 @@
 
 
-hostname = buy.itunes.apple.com, api.revenuecat.com
+hostname = buy.itunes.apple.com, api.revenuecat.com, api.rc-backup.com
 
 # > Picsew解锁专业版
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/re2/g/master/PicsewProCrack.js
@@ -13,3 +13,6 @@ hostname = buy.itunes.apple.com, api.revenuecat.com
 
 # > Pillow解锁专业版
 ^https:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/revcat2099.js
+
+^https:\/\/api\.(revenuecat|rc-backup)\.com\/.+\/(receipts$|subscribers\/.+$) url script-response-body https://raw.githubusercontent.com/re2/g/master/crack.js
+^https:\/\/api\.(revenuecat|rc-backup)\.com\/.+\/(receipts$|subscribers\/.+$) url script-request-header https://raw.githubusercontent.com/re2/g/master/crack.js
