--- a/PicsewProCrack.conf
+++ b/PicsewProCrack.conf
@@ -3,3 +3,6 @@ hostname = buy.itunes.apple.com, api.revenuecat.com
 
 # > Picsew解锁专业版
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/re2/g/master/PicsewProCrack.js
+
+# > NYFM Permanent VIP 1.5.2 buy.itunes.apple.com, 
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
