--- a/ForOwnUser.conf
+++ b/ForOwnUser.conf
@@ -1,12 +1,6 @@
 
 
-hostname = buy.itunes.apple.com, api.revenuecat.com, api.rc-backup.com
-
-# > Picsew解锁专业版
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/re2/g/master/PicsewProCrack.js
-
-# > NYFM Permanent VIP 1.5.2 buy.itunes.apple.com, 
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/re2/g/master/NYFM.js
+hostname = api.revenuecat.com, api.rc-backup.com
 
 # >计步器 StepsApp（恢复购买）
 ^https?:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/stepsapp.js
@@ -14,5 +8,6 @@ hostname = buy.itunes.apple.com, api.revenuecat.com, api.rc-backup.com
 # > Pillow解锁专业版
 ^https:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/revcat2099.js
 
+# > 解锁专业版
 ^https:\/\/api\.(revenuecat|rc-backup)\.com\/.+\/(receipts$|subscribers\/.+$) url script-response-body https://raw.githubusercontent.com/re2/g/master/crack.js
 ^https:\/\/api\.(revenuecat|rc-backup)\.com\/.+\/(receipts$|subscribers\/.+$) url script-request-header https://raw.githubusercontent.com/re2/g/master/crack.js
